fix wrap of caption and filter icon

--- a/public/agileui.less
+++ b/public/agileui.less
@@ -98,6 +98,7 @@ footer.atk-footer {
 }
 
 .atk-table-column-header {
+	white-space: break-spaces;
     &:after {
       //display: none;
       font-style: normal;
